add SUBSCRIBE TO OUR NEWSLETTER and Footer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="./src/css/animation.css" />
     <title>OFPPT Archive || digital development</title>
+    <meta name="description" content="Discover the resources you need to succeed in digital development.">
   </head>
   <body>
     <div id="go-top">
@@ -221,7 +222,7 @@
       <section class="latest-articles">
         <div class="article-card">
           <div class="image-container">
-            <img src="./src/img/thumbnail.png" alt="post image" />
+            <img src="./src/img/post_img.jpg" alt="post image" />
           </div>
           <div class="content">
             <h4 class="article-title">
@@ -237,7 +238,7 @@
         </div>
         <div class="article-card">
           <div class="image-container">
-            <img src="./src/img/thumbnail.png" alt="post image" />
+            <img src="./src/img/post_img.jpg" alt="post image" />
           </div>
           <div class="content">
             <h4 class="article-title">
@@ -253,7 +254,7 @@
         </div>
         <div class="article-card">
           <div class="image-container">
-            <img src="./src/img/thumbnail.png" alt="post image" />
+            <img src="./src/img/post_img.jpg" alt="post image" />
           </div>
           <div class="content">
             <h4 class="article-title">
@@ -269,7 +270,7 @@
         </div>
         <div class="article-card">
           <div class="image-container">
-            <img src="./src/img/thumbnail.png" alt="post image" />
+            <img src="./src/img/post_img.jpg" alt="post image" />
           </div>
           <div class="content">
             <h4 class="article-title">
@@ -287,6 +288,18 @@
     </section>
     <!-- !latest Articles section -->
 
+
+
+<div class="news-letter">
+  <h3 class="section-title">Subscribe To Our Newsletter</h3>
+  <form class="news">
+    <input type="email" placeholder="Enter your email to get updates" required/>
+    <button type="submit">Subscribe Now</button>
+  </form>
+</div>
+    <footer>
+
+    </footer>
     <script src="./src/js/script.js"></script>
   </body>
 </html>
