--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 
 <div class="news-letter">
-  <h3 class="section-title">Subscribe To Our Newsletter</h3>
+  <h1 class="section-title">Newsletter</h1>
   <form class="news">
     <input type="email" placeholder="Enter your email to get updates" required/>
     <button type="submit">Subscribe Now</button>
