--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <div class="news-letter">
   <h1 class="section-title">Newsletter</h1>
   <form class="news">
-    <input type="email" placeholder="Enter your email to get updates" required/>
+    <input type="email" name="email" placeholder="Enter your email to get updates" required/>
     <button type="submit">Subscribe Now</button>
   </form>
 </div>
