--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/Functions.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
-          <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <h4 class="video-title">Top five Functions in javascript</h4>
+          <span class="duration">duration: 20min</span>
+          <span class="views"><i class="fa fa-eye"></i> 200k views</span>
         </div>
         <div class="video">
           <div class="video-thumbnail">
@@ -139,14 +139,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/gototop.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
+          <h4 class="video-title">Go to top button using javascript</h4>
           <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <span class="views"><i class="fa fa-eye"></i> 150k views</span>
         </div>
         <div class="video">
           <div class="video-thumbnail">
@@ -154,14 +154,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/python.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
-          <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <h4 class="video-title">How to make 3k $ using python </h4>
+          <span class="duration">duration: 1h:25min</span>
+          <span class="views"><i class="fa fa-eye"></i> 120k views</span>
         </div>
         <div class="video">
           <div class="video-thumbnail">
@@ -209,7 +209,7 @@
           <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
         </div>
       </div>
-      <a href="#start" class="btn">More videos</a>
+      <a href="#" class="btn">More videos</a>
     </section>
     <!--! top watched section  ends here -->
 
@@ -300,19 +300,22 @@
         </div>
       </section>
     </section>
+<a href="#start" class="btn mx-auto">More Articles </a>
     <!-- !latest Articles section -->
 
 
 
 <div class="news-letter">
   <h1 class="section-title">Newsletter</h1>
-  <form class="news">
+  <form class="news" method="get">
     <input type="email" name="email" placeholder="Enter your email to get updates" required/>
     <button type="submit">Subscribe Now</button>
   </form>
 </div>
     <footer>
+      <div class="container">
 
+      </div>
     </footer>
     <script src="./src/js/script.js"></script>
   </body>
