--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/codePro.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
-          <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <h4 class="video-title">Code like a pro in 5 minutes</h4>
+          <span class="duration">duration: 5min</span>
+          <span class="views"><i class="fa fa-eye"></i> 102k views</span>
         </div>
         <div class="video">
           <div class="video-thumbnail">
@@ -184,14 +184,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/cssMediaquery.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
-          <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <h4 class="video-title">10 tips to master css media queries</h4>
+          <span class="duration">duration: 9min</span>
+          <span class="views"><i class="fa fa-eye"></i> 100K views</span>
         </div>
         <div class="video">
           <div class="video-thumbnail">
@@ -199,14 +199,14 @@
               <i class="fa fa-play-circle"></i>
             </div>
             <img
-              src="./src/img/thumbnail.png"
+              src="./src/img/AIWebsites.jpg"
               alt="video-thumbnail"
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">switch theme mode using js</h4>
-          <span class="duration">duration: 15min</span>
-          <span class="views"><i class="fa fa-eye"></i> 9000 views</span>
+          <h4 class="video-title">Best artificial intelligence websites </h4>
+          <span class="duration">duration: 5min</span>
+          <span class="views"><i class="fa fa-eye"></i> 80k views</span>
         </div>
       </div>
       <a href="#" class="btn">More videos</a>
