--- a/index.html
+++ b/index.html
@@ -240,8 +240,37 @@
               <a href="" class="follow_page_btn"><i class="fa-brands fa-facebook-square"></i> Follow page</a>
               <a href="" class="follow_page_btn btn_info"><i class="fa fa-info-circle"></i> learn more</a>
             </div>
-          </div>
-        </div>
+            </div>
+            </div>
+            <div class="top_files">
+              <h5>top downloaded Files </h5>
+              <div class="file_card">
+                <div class="file_img">
+                  <img src="./src/img/pythonCheat.jpg" alt="">
+                </div>
+                <div class="file_content">
+                  <a class="file_name">python cheat sheet</a>
+                  <p class="file_desc">This cheat sheet includes the materials I've covered in my Python </p>
+                  <div class="file_info">
+                    <i class="fa fa-download"></i>
+                    <span>35K downloads</span>
+                  </div>
+                </div>
+              </div>
+              <div class="file_card">
+                <div class="file_img">
+                  <img src="./src/img/javascript cheat.jpg" alt="">
+                </div>
+                <div class="file_content">
+                  <a class="file_name">javascript cheat sheet</a>
+                  <p class="file_desc">This 13-page cheatsheet will take you from a beginner to advanced </p>
+                  <div class="file_info">
+                    <i class="fa fa-download"></i>
+                    <span>20K downloads</span>
+                  </div>
+                </div>
+              </div>
+            </div>
       </aside>
       <section class="latest-articles">
         <div class="article-card">
