--- a/404.html
+++ b/404.html
@@ -16,9 +16,6 @@
 </head>
 
 <body>
-    <div id="go-top">
-        <i class="fa-solid fa-arrow-up"></i>
-    </div>
     <!-- gear icon -->
     <i class="fa-solid fa-gears settings-icon" id="settings-icon"></i>
     <!-- settings -->
@@ -36,61 +33,12 @@
         </ul>
     </div>
     <!-- settings -->
+    <i id="menu-icon"></i>
 
-    <!-- header section starts here -->
-    <i class="menu-icon fa fa-bars" id="menu-icon"></i>
-    <header class="container">
-        <a href="/">
-            <img src="./src/img/devlogo.png" alt="Ofppt logo" class="logo" /></a>
-        <nav class="navbar" id="navbar">
-            <ul class="main-menu">
-                <li>
-                    <a href="index.html"><i class="fa fa-home"></i>Home</a>
-                </li>
-                <li>
-                    <a href="about.html"><i class="fa fa-question-circle"></i>about</a>
-                </li>
-                <li>
-                    <a href="Team.html"><i class="fa fa-users"></i>our team</a>
-                </li>
-                <li>
-                    <a href="contact.html"><i class="fa fa-headset"></i>Contact</a>
-                </li>
-                <li>
-                    <a href=""><i class="fa fa-list"></i>Courses</a>
-                    <div class="sub-menu">
-                        <img src="./src/img/Dropdown menu-bro.svg" alt="mega menu image" class="image pulse" />
-                        <div class="links">
-                            <ul>
-                                <li>
-                                    <a href=""><i class="fa fa-video"></i>Videos</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-file"></i>Documents</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-globe"></i>Websites</a>
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <a href=""><i class="fa fa-computer"></i>Applications</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-gamepad"></i>Games</a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-folder"></i>Articles</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
     <main class="notFound">
-        <img src="./src/img/404 Error Page not Found .svg" alt="">
+        <img src="./src/img/Monster 404 Error-bro.svg" alt="">
+        <h1>oops this page could not be found </h1>
+        <a href="./" class="btn"> Go back to home</a>
     </main>
     <script src="./src/js/script.js"></script>
 </body>
