repair AOS error

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </header>
     <!-- ! header section ends here -->
     <!-- hero section starts here -->
-    <div data-aos="zoom-in-down" class="hero container">
+    <div data-aos="zoom-out-right" class="hero container">
       <div class="text-holder">
         <h1 class="hero-title">Welcome to Ofppt Archive</h1>
         <p class="hero-text">
