--- a/single_post.html
+++ b/single_post.html
@@ -30,7 +30,7 @@
             <li class="color" style="background-color: rgba(255, 99, 71, 1)"></li>
             <li class="color" style="background-color: rgba(255, 128, 128,1)"></li>
             <li class="color" style="background-color: rgba(255, 176, 0,1)"></li>
-            <li class="color" style="background-color: rgba(40, 40, 54, 1)"></li>
+            <li class="color" style="background-color: rgba(186,9,19,1)"></li>
             <li class="color" style="background-color: rgba(79, 155, 115, 1)"></li>
             <li class="color" style="background-color: rgba(56, 118, 191,1)"></li>
         </ul>
@@ -197,7 +197,7 @@
                 <h3>related Articles</h3>
                 <div class="related">
                     <img src="./src/img/post_img.jpg">
-                    <a href="">New Technology Trends And Emerging Technologies In 2024</a>
+                    <a href="./404.html">New Technology Trends And Emerging Technologies In 2024</a>
                 </div>
             </div>
         </div>
