--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     <i id="menu-icon"></i>
 
     <main class="notFound">
-        <img src="./src/img/Monster 404 Error-bro.svg" alt="">
+        <img src="./src/img/Monster 404 Error-bro.svg" class="wobble">
         <h1>oops this page could not be found </h1>
         <a href="./" class="btn"> Go back to home</a>
     </main>
