add signup form and single video page

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               class="img-thumb"
             />
           </div>
-          <h4 class="video-title">Top five Functions in javascript</h4>
+          <h4 class="video-title"><a href="./single_video.html">Top five Functions in javascript</a></h4>
           <span class="duration">duration: 20min</span>
           <span class="views"><i class="fa fa-eye"></i> 200k views</span>
         </div>
@@ -361,9 +361,60 @@
 </div>
     <footer id="footer">
       <div class="container cols">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+          <h3>OFPPT ARCHIVE</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque enim temporibus sapiente molestias at? Autem
+            suscipit deserunt atque fugiat cum, nemo similique veniam rerum, quis sit impedit excepturi omnis corrupti!</p>
+        </div>
+        <div class="col">
+          <h3>Our partner</h3>
+          <h3>> partner 1</h3>
+          <h3>> partner 2</h3>
+          <h3>> partner 3</h3>
+          <h3>> partner 4</h3>
+        </div>
+        <div class="col">
+          <h3>top applications</h3>
+          <div class="footer_items">
+            <div class="footer_item">
+              <img src="./src/img/icons8_pycharm.svg">
+              <span>Pycharm</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_sublime_text.svg">
+              <span>Sublime</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_mongodb.svg">
+              <span>mongodb</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_git.svg">
+              <span>git</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <h3>Reach us</h3>
+          <div class="footer_items">
+            <div class="footer_item">
+              <img src="./src/img/icons8_facebook.svg">
+              <span>facebook</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_instagram.svg">
+              <span>instagram</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_vimeo.svg">
+              <span>vimeo</span>
+            </div>
+            <div class="footer_item">
+              <img src="./src/img/icons8_tiktok.svg">
+              <span>tiktok</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="container copyright">
         Copyright &copy; 2023 Made with &heartsuit; by dev101 groupe 1 All Rights Reserved.
