--- a/login.html
+++ b/login.html
@@ -57,6 +57,9 @@
                     <label for="remember">Remember Me</label>
                 </div>
                 <input type="submit" value="Login">
+                <div class="input-field">
+                    <span class="signup_hint">you don't have an account yet? <a href="signup.html">sign up</a></span>
+                </div>
                 <a href="./index.html"> <i class="fa fa-arrow-alt-circle-right"></i>Go back to Home</a>
             </form>
         </div>
