--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="about.html"><i class="fa fa-question-circle"></i>about</a>
           </li>
           <li>
-            <a href="team.html"><i class="fa fa-users"></i>our team</a>
+            <a href="Team.html"><i class="fa fa-users"></i>our team</a>
           </li>
           <li>
             <a href="contact.html"><i class="fa fa-headset"></i>Contact</a>
