add jaafer partie

--- a/App.html
+++ b/App.html
@@ -69,31 +69,31 @@
                                 </li>
                                 <li>
                                     <a href="document.html"><i class="fa fa-file"></i>Documents</a>
+                                </li>
+                                <li>
+                                    <a href="site.html"><i class="fa fa-globe"></i>Websites</a>
+                                </li>
+                                </ul>
+                                <ul>
+                                    <li class="active">
+                                        <a href="./App.html"><i class="fa fa-computer"></i>Applications</a>
                                     </li>
                                     <li>
-                                    <a href="site.html"><i class="fa fa-globe"></i>Websites</a>
+                                        <a href=""><i class="fa fa-gamepad"></i>Games</a>
                                     </li>
-                                    </ul>
-                                    <ul>
-                                        <li class="active">
-                                            <a href="./App.html"><i class="fa fa-computer"></i>Applications</a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="fa fa-gamepad"></i>Games</a>
-                                        </li>
-                                        <li>
-                                            <a href=""><i class="fa fa-folder"></i>Articles</a>
-                                        </li>
+                                    <li>
+                                        <a href=""><i class="fa fa-folder"></i>Articles</a>
+                                    </li>
                                 <li>
                                     <a href="table.html"><i class="fa fa-users"></i>Users</a>
                                 </li>
                             </ul>
-                            </div>
-                            </div>
-                            </li>
-                            </ul>
-                            </nav>
-                            </header>
+                        </div>
+                        </div>
+                        </li>
+                        </ul>
+                        </nav>
+                        </header>
     <!-- ! header section ends here -->
 
     <div id="applications" class="container">
@@ -131,15 +131,15 @@
                     </div>
 
                 </div>
-                </div>
-                <div class="box1">
-                    <div class="app" data-aos="zoom-in">
-                        <img class="image" src="src/img/vs.jpg" alt="">
-                        <div class="app-img">
-                            <div class="app-btn">
-                                <button class="btn1">install</button>
-                            </div>
+            </div>
+            <div class="box1">
+                <div class="app" data-aos="zoom-in">
+                    <img class="image" src="src/img/vs.jpg" alt="">
+                    <div class="app-img">
+                        <div class="app-btn">
+                            <button class="btn1">install</button>
                         </div>
+                    </div>
 
                 </div>
                 <div class="app" data-aos="zoom-in">
@@ -160,15 +160,15 @@
                     </div>
 
                 </div>
-                </div>
-                <div class="box1">
-                    <div class="app" data-aos="fade-left">
-                        <img class="image" src="src/img/sql.jpg" alt="">
-                        <div class="app-img">
-                            <div class="app-btn">
-                                <button class="btn1">install</button>
-                            </div>
+            </div>
+            <div class="box1">
+                <div class="app" data-aos="fade-left">
+                    <img class="image" src="src/img/sql.jpg" alt="">
+                    <div class="app-img">
+                        <div class="app-btn">
+                            <button class="btn1">install</button>
                         </div>
+                    </div>
 
                 </div>
                 <div class="app" data-aos="fade-left">
@@ -189,7 +189,7 @@
                     </div>
 
                 </div>
-                </div>
+            </div>
 
         </div>
         <div id="btn2">
@@ -272,3 +272,6 @@
     <script>
         AOS.init();
     </script>
+</body>
+
+</html>
