--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                     <a href="./App.html"><i class="fa fa-computer"></i>Applications</a>
                   </li>
                   <li>
-                    <a href=""><i class="fa fa-gamepad"></i>Games</a>
+                    <a href="game.html"><i class="fa fa-gamepad"></i>Games</a>
                   </li>
                   <li>
-                    <a href=""><i class="fa fa-folder"></i>Articles</a>
+                    <a href="Articles.html"><i class="fa fa-folder"></i>Articles</a>
                   </li>
                   <li>
                     <a href="table.html"><i class="fa fa-users"></i>Users</a>
